<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aaveq_dynamics</name>
  <version>0.0.0</version>
  <description>Collection of physics based functions, like computation of drag and rigid body dynamics.</description>
  <maintainer email="nicoline@finman.dk">Nicoline L. Thomsen</maintainer>
  <license>TODO: license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
